add storage overhead field (single default value)
XXX does not seem to work?
