# pkg/apis/core/v1beta1/types.go
@@ -311,6 +311,7 @@ type CDIConfigSpec struct {
 	ScratchSpaceStorageClass *string                      `json:"scratchSpaceStorageClass,omitempty"`
 	PodResourceRequirements  *corev1.ResourceRequirements `json:"podResourceRequirements,omitempty"`
 	FeatureGates             []string                     `json:"featureGates,omitempty"`
+	StorageOverhead	         *string                      `json:"storageOverhead,omitempty"`
 }
 
 //CDIConfigStatus provides
@@ -318,6 +319,7 @@ type CDIConfigStatus struct {
 	UploadProxyURL                 *string                      `json:"uploadProxyURL,omitempty"`
 	ScratchSpaceStorageClass       string                       `json:"scratchSpaceStorageClass,omitempty"`
 	DefaultPodResourceRequirements *corev1.ResourceRequirements `json:"defaultPodResourceRequirements,omitempty"`
+	StorageOverhead                *string                      `json:"storageOverhead,omitempty"`
 }
 
 //CDIConfigList provides the needed parameters to do request a list of CDIConfigs from the system
